hphp/hack/test/typecheck/inout/bad_inout_decl_byref1.php.exp
File "bad_inout_decl_byref1.php", line 3, characters 15-26:
An 'inout' parameter cannot be passed by reference ('&'). (Parsing[1002])
